	 improved retrigged interrupt support: interrupts no longer
	 accepted after an EI/EI or EI/DI sequence.
20031107 snapshot.c: use libspectrum's support for the 'last instruction
	 EI' flag.
20031111 event.c, z80/z80.[ch]: further changes to the interrupt code to
	 allow old Fuse recordings to play back successfully.
20031112 memory.c, z80/Makefile.am, z80/coretest.c, z80/harness.pl,
	 z80/z80.pl, z80/z80_macros.h, z80/tests/: Z80 core improvements
	 to reduce the number of calls made to contend_memory().
20031113 printer.c: readbyte() should be readbyte_internal().
20031114 Make the memory access routines both simpler and more flexible.
	 TODO: TC2068 routines.
20031114 memory.[ch], z80/z80.pl, z80/z80_ops.c: macroise
         readbyte_internal().
20031114 Remove use of *_contend_memory().
20031114 Precalculate the contention at every tstate.
20031115 event.c, rzx.c, timer.[ch], ui/ui.h, ui/gtk/statusbar.c,
	 widget/widget.c: add current emulation speed to GTK+ statusbar.
20031116 fuse.c, timer.[ch]: better speed estimation just after emulation
	 unpause (or startup).
20031117 memory.h, scld.c, tape.c, tc2068.c: get TC2068 memory routines
	 working again.
20031118 ui/gtk/gtkui.c: make speed estimates work properly after the GTK+
	 pause function is used.
20031119 Merge the 'generic' and TC2068 paging schemes.
20031120 psg.c: write pause lengths out correctly.
20031120 specplus3.c: make the 64Kb RAM configurations work again.
20031124 timer.c: prevent too big a 'backlog' from occuring.
20031127 memory.h: ensure 'address' is a 16-bit value before using it.
20031128 fuse.c: initialise the poke finder on startup.
20031128 ui/gtk/gtkui.c: split create_dialog into multiple functions.
20031201 spec16.c: ensure we have a prototype for memset().
20031202 Some --enable-warnings tidy-ups.
20031202 machine.c: fix a small (but definite) memory leak.
20031203 ui/gtk/debugger.c: add ability to turn individual 'panes' on and
	 off.