@@ -378,3 +378,5 @@
 20031202 machine.c: fix a small (but definite) memory leak.
 20031203 ui/gtk/debugger.c: add ability to turn individual 'panes' on and
 	 off.
+20031206 event.[ch], ui/gtk/debugger.c: add a 'pending events' pane to the
+	 debugger.
